--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
 	"name": "WikimediaCustomizations",
 	"private": true,
 	"scripts": {
-		"test": "grunt test"
+		"test": "grunt test",
+		"api-testing": "mocha --timeout 0 --recursive tests/api-testing"
 	},
 	"devDependencies": {
+		"api-testing": "1.7.2",
 		"eslint-config-wikimedia": "0.32.3",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
