--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"devDependencies": {
 		"api-testing": "1.7.3",
+		"chai-openapi-response-validator": "^0.14.2",
 		"eslint-config-wikimedia": "0.32.3",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
